# swcf-node

./: README.md  package-lock.json  package.json
data/: input.js
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
native/src/networking/: requests.rs
native/src/transformers/: proxy_functions.rs  strings.rs
native/src/utils/: deobfuscate_script.rs
