[package]
name = "swcf-node"
version = "0.1.0"
authors = ["root"]
license = "MIT"
build = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "swcf_node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"

[profile.release]
lto = true
incremental = true

[dependencies]
neon = "0.10.1"
lz-str = "0.2.1"
regex = "1.10.4"
serde = "1"
serde_json = "1.0.117"
swc = "0.275.1"
swc_common = "0.33.26"
swc_core = { version = "0.92.5", features = [
    "common",
    "ecma_utils",
    "ecma_plugin_transform",
    "ecma_codegen",
    "ecma_transforms_optimization",
] }
swc_ecma_ast = "0.113.4"
swc_ecma_minifier = "0.194.5"
swc_ecma_parser = "0.144.1"
swc_ecma_transforms = "0.230.1"
swc_ecma_transforms_typescript = "0.189.1"
swc_ecma_visit = "0.99.1"
reqwest = { version = "0.12.4", features = [
    "blocking",
    "gzip",
    "brotli",
    "http2",
    "rustls-tls",
], default-features = false }
rand = "0.8.5"
chrono = "0.4.38"
serde_derive = "1.0.203"
base64 = "0.22.1"
swc_config = "=0.1.13"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
